<resources>
    <string name="app_name">Fake Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">EMAIL</string>
    <string name="emailAllLowerCaseExFirst">Email</string>
    <string name="password">PASSWORD</string>
    <string name="passwordAllLowerCase">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user">New User?</string>
    <string name="create_an_account">Create an account</string>
    <string name="Sign_up">Sign up</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="full_name">FULL NAME</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="username">USERNAME</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="re_type_password">Re-type password</string>
    <string name="date">DATE</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_Ques_mark">Forgot Password?</string>
    <string name="please_provide_us_with_your_email_address">Please Provide us with your email \n address, and we will send you a link to \n regain access to your account.</string>
    <string name="email_address">Email Address</string>
    <string name="send_login_link">Send login link</string>
    <string name="resent_email">Resent email</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="join_fakefinder">Join FakeFinder</string>
    <string name="birthdate">BirthDate</string>
    <string name="fake_finder">Fake Finder</string>
    <string name="backpress">BackPress</string>
    <string name="what_s_your_name_and_gender">What\'s your name and gender?</string>
    <string name="enter_the_name_you_use_in_real_life_and_your_gender">Enter the name you use in real life and your gender.</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="optional">(optional)</string>
    <string name="skip">Skip</string>
    <string name="what_s_your_email_address">What\'s your email address?</string>
    <string name="enter_the_email_address_at_which_you_can_be_contacted">Enter the email address at which you can be contacted</string>
    <string name="create_a_password">Create a password</string>
    <string name="create_a_password_with_at_least_6_letters">Create a password with at least 6 letters or numbers. It should be something others can\'t guess</string>
    <string name="confirm">Confirm</string>
    <string name="kirollous_hany">Kirollous Hany</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="deepfake_voice_n_detection">Voice Detection</string>
    <string name="involves_identifying_and_distinguishing_artificially_synthesized_or_manipulated_voices_from_authentic_ones">Involves identifying and distinguishing artificially synthesized or manipulated voices from authentic ones.</string>
    <string name="experience_cutting_edge_audio_manipulation_with_our_app_generate_and_detect_deepfake_audio_and_apply_voice_filters_for_a_captivating_and_innovative_audio_experience">Experience cutting-edge audio manipulation with our app – generate and detect deepfake audio, and apply voice filters for a captivating and innovative audio experience.</string>
    <string name="hello">Hello, </string>
    <string name="deepfake_voice_n_generation">Voice Generation</string>
    <string name="voice_n_filtration">Voice Filtration</string>
    <string name="deepfake_voice_generation_is_an_ai_driven_technology_that_synthesizes_human_like_voices_posing_challenges_in_distinguishing_real_from_artificially_generated_audio">Creates human-like voices, challenging to distinguish from real audio.</string>
    <string name="enhance_your_audio_experience_by_effortlessly_filtering_and_customizing_voice_tones_to_suit_your_preferences">Enhance your audio experience by effortlessly filtering and customizing voice tones to suit your preferences.</string>
    <string name="detect_and_prevent_voice_deepfakes_by_easily_uploading_audio_from_your_device">Detect and prevent voice deepfakes by easily uploading audio from your device.</string>
    <string name="detect">Detect</string>
    <string name="remove_amp_upload_another_audio"><![CDATA[Remove & Upload another audio]]></string>
    <string name="here_you_can_see_the_history">Explore the journey of your voices here! Check out the history of all your detected, filtered, and generated voices.</string>
    <string name="voice_detection_history">Voice Detection History</string>
    <string name="voice_filtration_history">Voice Filtration History</string>
    <string name="voice_generation_history">Voice Generation History</string>
    <string name="feel_free_to_personalize_your_profile_information_here">Feel free to personalize your profile information here.</string>
    <string name="profile_photo">PROFILE PHOTO</string>
    <string name="name">FULL NAME</string>
    <string name="gender">GENDER</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Update</string>
    <string name="enter_your_new_username_below">Enter your new username below</string>
    <string name="enter_your_new_full_name_below">Enter your new full name below</string>
    <string name="choose_your_gender">Choose your Gender</string>
    <string name="click_here_to_send_reset_password_link_to_your_email">Click here to send reset password link to your email.</string>
    <string name="send_link">Send Link</string>
    <string name="find_account">Find Account</string>
    <string name="update_full_name">Update Full Name</string>
    <string name="to_update_your_full_name_please_enter_your_new_full_name_in_the_field_below">To update your full name, please enter your new full name in the field below.</string>
    <string name="update_your_profile_picture">Update Your Profile Picture</string>
    <string name="tap_the_image_below_to_upload_a_new_profile_picture">Tap the image below to upload a new profile picture.</string>
    <string name="click_to_receive_a_password_reset_link_via_email">Click to receive a password reset link via email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="select_your_gender_identity">Select your gender identity</string>
    <string name="update_gender">Update Gender</string>
    <string name="update_username">Update Username</string>
    <string name="to_update_your_username_please_enter_your_new_username_in_the_field_below">To update your username, please enter your new username in the field below.</string>
    <string name="remove_profile_picture">Remove profile Picture</string>
    <string name="update_email">Update Email</string>
    <string name="to_update_your_email_please_enter_your_password_in_the_field_below">To update your email, please enter your password in the field below.</string>
    <string name="refine_and_safeguard_audio_authenticity_through_voice_filtration_effortlessly_enhancing_the_integrity_of_your_recordings_and_thwarting_potential_misuse">Refine and safeguard voice authenticity through voice filtration, effortlessly enhancing the integrity of your recordings and thwarting potential misuse.</string>
    <string name="record_your_voice">Record Your \n Voice</string>
    <string name="upload_your_n_voice">Upload Your \n Voice</string>
    <string name="or">OR</string>
    <string name="record_confidently_here_with_our_built_in_filter_for_clear_audio_share_your_thoughts_effortlessly">Record confidently here with our built-in filter for clear audio. Share your thoughts effortlessly!</string>
    <string name="_00_00_00">00:00.00</string>
    <string name="elevate_your_audio_quality_effortlessly_upload_your_recording_from_your_device_and_enjoy_enhanced_clarity_with_our_simple_voice_filtration_tool">Elevate your audio quality effortlessly! Upload your recording from your device and enjoy enhanced clarity with our simple voice filtration tool.</string>
    <string name="filter">Filter</string>
    <string name="generate">Generate</string>
    <string name="type_here_your_words">Type here text </string>
    <string name="generate_voice_deepfakes_by_easily_uploading_audio_from_your_device">Generate voice deepfakes by easily uploading audio from your device.</string>
    <string name="add_your_own_text">Please write what you want to say</string>
    <string name="update_password">Update Password</string>
    <string name="to_update_your_password_please_enter_your_password_in_the_field_below">To update your password, please enter your password in the field below.</string>
    <string name="please_enter_your_new_password_in_the_field_below">Please enter your new password in the field below</string>
    <string name="please_enter_your_new_email_in_the_field_below">Please enter your new email in the field below</string>
    <string name="back_to_home">Back to Home</string>
    <string name="your_filtered_audio_is_ready_enjoy_listening">Your filtered audio is ready. Enjoy listening!</string>
    <string name="you_have_the_option_to_choose_your_preferred_method_for_generating_deep_fake_voices_explore_our_range_of_options_to_tailor_your_experience_according_to_your_preferences">You have the option to choose your preferred method for generating deep fake voices. Explore our range of options to tailor your experience according to your preferences.</string>
    <string name="upload_your_voice_and_input_n_the_desired_text_for_it_to_speak">Upload your voice and input the desired text for it to speak</string>
    <string name="upload_two_voices_one_as_the_source_text_and_the_other_as_the_target_for_voice_cloning">Upload two voices: one as the source text and the other as the target for voice cloning</string>
    <string name="write_the_desired_text_for_voice_to_speak">Write the desired text for voice to speak in the field below.</string>
    <string name="generate_voice_deepfakes_by_easily_uploading_two_audios_from_your_device">Generate voice deepfakes by easily uploading two audios from your device.</string>
    <string name="upload_the_first_audio_as_the_source_text_to_generate_deepfake_audio">Upload the first audio from your device as the source text to generate deepfake audio.</string>
    <string name="upload_the_second_audio_as_the_target_voice_to_be_cloned_for_generating_deepfake_audio">Upload the second audio from your device as the voice to be cloned for generating deepfake audio.</string>
    <string name="your_generated_audio_is_ready_enjoy_listening">Your generated audio is ready. Enjoy listening!</string>
    <string name="voice_voice"><![CDATA[Voice & Voice]]></string>
    <string name="text_voice"><![CDATA[Text & Voice]]></string>
    <string name="upload_audio_from_your_device_as_the_target_voice_to_be_cloned_for_generating_deepfake_audio">Upload audio from your device as the voice to be cloned for generating deepfake audio.</string>
    <string name="your_analysis_is_complete_check_the_authenticity_of_the_audio_now">Your analysis is complete. This Audio is likely to be:</string>

</resources>